edit-recette form almost done

--- a/nodejs/app/views/footer.ejs
+++ b/nodejs/app/views/footer.ejs
@@ -22,3 +22,9 @@
 
 <!-- Bootstrap notify -->
 <script src="/js/bootstrap-notify.min.js"> </script>
+
+<!-- Input counter -->
+<script src="/js/counter-input.js"></script>
+
+<!-- Time picker -->
+<script src="/js/bootstrap-timepicker.min.js"></script>
