--- a/nodejs/app/views/header.ejs
+++ b/nodejs/app/views/header.ejs
@@ -21,6 +21,9 @@
     <!-- CSS for staring -->
     <link href="/css/star-rating.min.css" rel="stylesheet">
 
+    <!-- Time picker -->
+    <link href="/css/bootstrap-timepicker.min.css">
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
