--- a/nodejs/assets/css/shop-item.css
+++ b/nodejs/assets/css/shop-item.css
@@ -174,6 +174,17 @@ caption h3 {
     max-width: 100px;
 }
 
+#edit-content {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+
+
+
+
+
+
 /* #########################################
    #    override the bootstrap configs     #
    ######################################### */
