--- a/nodejs/app/views/index.ejs
+++ b/nodejs/app/views/index.ejs
@@ -13,12 +13,15 @@
         <div class="row">
 
             <div class="col-md-3">
-                <p class="lead"></p>
-                <div class="list-group">
-                    <a href="#" class="list-group-item">Category 1</a>
-                    <a href="ingredient/classement" class="list-group-item">Classement des ingrédients</a>
-                    <a href="#" class="list-group-item">Category 3</a>
-                </div>
+                
+                <img src="/images/logo.png" width="100%">
+
+                <h4>
+                    Bienvenue sur RECETATOR 3000, un site qu'il ne vaut mieux pas contredire
+                </h4>
+                <p>
+                    Arborescence du site : <a href="/404">ICI</a>
+                </p>
             </div>
 
             <div class="col-md-9">
