--- a/nodejs/app/views/navigation.ejs
+++ b/nodejs/app/views/navigation.ejs
@@ -20,6 +20,9 @@
                 <li>
                     <a href="/recette/search">Chercher une recette</a>
                 </li>
+                <li>
+                    <a href="/ingredient/classement">Classement des ingédients</a>
+                </li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
