--- a/nodejs/app/views/index.ejs
+++ b/nodejs/app/views/index.ejs
@@ -17,7 +17,7 @@
                 <img src="/images/logo.png" width="100%">
 
                 <h4>
-                    Bienvenue sur RECETATOR 3000, un site qu'il ne vaut mieux pas contredire
+                    Bienvenue sur RECETATOR 3000, un site qu'il vaut mieux ne pas contredire
                 </h4>
                 <p>
                     Arborescence du site : <a href="/404">ICI</a>
