--- a/nodejs/app/views/index.ejs
+++ b/nodejs/app/views/index.ejs
@@ -13,8 +13,10 @@
         <div class="row">
 
             <div class="col-md-3">
-                
-                <img src="/images/logo.png" width="100%">
+
+                <div align="center">
+                    <img id="img_logo" src="/images/logo.png">
+                </div>
 
                 <h4>
                     Bienvenue sur RECETATOR 3000, un site qu'il vaut mieux ne pas contredire
