--- a/nodejs/app/views/recette_search.ejs
+++ b/nodejs/app/views/recette_search.ejs
@@ -114,11 +114,8 @@
             </div>
             <div class="ratings">
                 <p class="pull-right"><span class="item-nombre-commentaire">12 commentaires</span></p>
-                <p>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star-empty"></span>
-                    2.00 étoiles
+                <p class="item-etoiles">
+                    <span class="item-rating">2.00 étoiles</span>
                 </p>
             </div>
         </div>
