--- a/nodejs/app/views/footer.ejs
+++ b/nodejs/app/views/footer.ejs
@@ -28,3 +28,6 @@
 
 <!-- Time picker -->
 <script src="/js/bootstrap-timepicker.min.js"></script>
+
+<! -- TinyMCE editor -->
+<script src="/js/tinymce/tinymce.min.js"></script>
