--- a/nodejs/app/views/navigation.ejs
+++ b/nodejs/app/views/navigation.ejs
@@ -23,6 +23,9 @@
                 <li>
                     <a href="/ingredient/classement">Classement des ingédients</a>
                 </li>
+                <li>
+                    <a href="#" id="add-recette" data-target="#add-modal" data-id="-1">Ajouter une recette</a>
+                </li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
@@ -163,3 +166,30 @@
     browser</a> to improve your experience.
 </div>
 <![endif]-->
+
+<!-- Edit modal -->
+<div aria-hidden="true" aria-labelledby="myModalLabel" class="modal fade" id="add-modal" role="dialog"
+     style="display: none;" tabindex="-1">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <form role="form" id="add-recette-form" method="post" action="/api/recette/edit/-1">
+
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <h4 class="modal-title">Ajout d'une recette</h4>
+                </div>
+
+                <div id="add-content">
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary">Save changes</button>
+                </div>
+
+            </form>
+        </div>
+    </div>
+</div>
