Catégories + liste catégories

--- a/nodejs/app/views/navigation.ejs
+++ b/nodejs/app/views/navigation.ejs
@@ -21,7 +21,7 @@
                     <a href="/recette/search">Chercher une recette</a>
                 </li>
                 <li>
-                    <a href="/ingredient/classement">Classement des ingédients</a>
+                    <a href="/ingredient/classement">Classement des ingrédients</a>
                 </li>
                 <li>
                     <a href="#" id="add-recette" data-target="#add-modal" data-id="-1">Ajouter une recette</a>
